test/field/get_on_function.lox
fn foo() {}

foo.bar // error: only instances have field
